feat: add worker support
